# damin2024

./: .gitignore  .pylintrc  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.dvc/: config
lecture01/: README.md
lecture02/: README.md  data.dvc  ex01_first_python_program.py  ex02_first_jupyter_notebook.ipynb  ex03_basic_python_syntax.py  ex04_variables_and_assignment.py  ex05_basic_strings_operations.py  ex06_simple_input_output.py  ex07_enhanced_input_output.py  ex08_conditional_statements.py  ex09_for_loops.py  ex10_while_loops.py  ex11_using_simple_functions.py  ex12_basic_list_operations.py  ex13_basic_tuple_operations.py  ex14_basic_dictionary_operations.py  ex15_load_csv_file.py  ex16_simple_data_manipulation.py  ex17_basic_statistics.py
lecture03/: README.md  ex01_vector_addition_plot.py  ex02_vector_subtraction_plot.py  ex03_scalar_multiplication_plots.py  ex04_dot_product_plot.py  ex05_dot_product_calculation.py  ex06_cross_product_plot.py  ex07_matrix_addition_subtraction_plot.py  ex08_matrix_multiplication_plot.py  ex09_transpose_matrix.py  ex10_identity_matrix.py  ex11_inverse_matrix.py  ex12_determinant_matrix.py  ex13_substitution_system_equation.py  ex14_elimination_system_equation.py  ex15_matrix_inversion_system_equation.py  ex16_gaussian_elimination_system_equation.py  ex17_rank_matrix.py  ex18_eigenvalues_calculation.py  ex19_eigenvectors_calculation.py  ex20_linear_transformations.py  ex21_composition_transformation.py
lecture04/: .gitignore  README.md  data.dvc  ex01_handling_missing_data.py  ex02_dealing_noisy_data.py  ex03_detecting_outliers.py  ex04_data_integration.py  ex05_normalization_standardization.py  ex06_aggregation_discretization.py  ex07_one_hot_label_enconding.py  ex08_simple_random_sampling.py  ex09_stratified_sampling.py  ex10_systematic_sampling.py  exercises.dvc
lecture05/: .gitignore  README.md  challenges.dvc  data.dvc  ex01_data_types.py  ex02_descriptive_statistics.py  ex03_normal_percentile.py  ex04_pearson_correlation_coefficient.py  ex05_ydata_profiling.py  ex06_distance_metrics.py  ex07_basic_visualization.py  ex09_advanced_visualization.py  ex09_interactive_visualization.py  exercises.dvc
(+74 files in other folders)
