[tool.poetry]
name = "data-mining-course"
version = "2024.1.4"
description = "A Python development environment used to manage all libraries and packages used in the Data Mining KSD course."
authors = ["Fabricio Batista Narcizo <narcizo@itu.dk>"]
license = "License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dash = "^2.18.1"
dlib = "^19.24.6"
dvc-s3 = "^3.2.0"
easygui = "^0.98.3"
kagglehub = "^0.3.1"
keras = "^3.5.0"
kneed = "^0.8.5"
lightning = "^2.4.0"
librosa = "^0.10.2.post1"
lmfit = "^1.3.2"
matplotlib = "^3.9.2"
mediapipe = "0.10.14"
mlxtend = "^0.23.3"
notebook = "^7.2.2"
numpy = "^1.26.4"
opencv-python = "^4.10.0.84"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
plotly = "^5.24.1"
pylint = "^3.3.1"
pyqtgraph = "^0.13.7"
PyQt6 = "^6.7.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
scipy = "^1.13.1"
sklearn-som = "^1.1.0"
squarify = "^0.4.4"
tensorflow = "^2.17.0"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchviz = "^0.0.2"
wordcloud = "^1.9.3"
ydata-profiling = "^4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/fabricionarcizo/damin2024"
Documentation = "https://github.com/fabricionarcizo/damin2024/wiki"
Repository = "https://github.com/fabricionarcizo/damin2024.git"
Issues = "https://github.com/fabricionarcizo/damin2024/issues"
