[metadata]
name = data-mining-course
version = 2024.0.2
author = Fabricio Batista Narcizo
author_email = narcizo@itu.dk
description = A Python development environment used to manage all libraries and packages used in the Data Mining KSD course.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fabricionarcizo/damin2024
project_urls =
    Bug Tracker = https://github.com/fabricionarcizo/damin2024/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Commercial Software Licensing
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.12.4

[options.packages.find]
where = src
